--- a/package.json
+++ b/package.json
@@ -1,30 +1,16 @@
 {
-  "name": "cryptoaudio",
-  "version": "0.0.1",
-  "description": "encryption and sound",
+  "name": "like_alert",
+  "version": "6.6.6",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "start": "node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/allthetime/encrypted-audio.git"
-  },
-  "keywords": [
-    "encryption",
-    "audio"
-  ],
   "author": "allthetime.io",
   "license": "BEER",
-  "bugs": {
-    "url": "https://github.com/allthetime/encrypted-audio/issues"
-  },
-  "homepage": "https://github.com/allthetime/encrypted-audio",
   "dependencies": {
-    "atob": "^1.1.2",
-    "btoa": "^1.1.2",
     "express": "^4.8.7",
     "request": "^2.40.0",
-    "socket.io": "^1.0.6"
+    "socket.io": "^1.0.6",
+    "twilio": "^1.7.0"
   }
 }
